--- a/src/main/java/login.html
+++ b/src/main/java/login.html
@@ -131,7 +131,7 @@
 
 <div id="id01" class="modal">
 
-    <form class="modal-content animate" action="/login" method="post"> // I changed the action to login here
+    <form class="modal-content animate" action="login" method="post"> // I changed the action to login here
         <div class="imgcontainer">
             <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
 
