--- a/src/main/java/login.html
+++ b/src/main/java/login.html
@@ -123,7 +123,7 @@
 <body>
 
 <h1>Welcome to Phab Pharmacy's online shop Phindr</h1>
-<img src="C:\Users\Sarah\Desktop\University\Year3\Prg3\website\logo.jpg" alt="Logo" width="500" height="333">
+<img src="logo.jpg" alt="Logo" width="500" height="333">
 
 <p>Please log in with your <b>login details</b> (surname and password) below </p>
 
